fixed formatting, fixed ids not lining up causing carousels to not work properly. Needs some refactoring to tidy up the props of functions and break them up into more manageable pieces

--- a/src/pages/leetcode.module.scss
+++ b/src/pages/leetcode.module.scss
@@ -7,6 +7,7 @@
 .carousel {
     width: 100%;
     display: flex;
+    height: fit-content;
     flex-direction: row;
     overflow-x: scroll;
     overflow-y: hidden;
@@ -18,12 +19,12 @@
 .carousel .slide {
     flex: 0 0 100%;
     overflow: scroll;
-    border: 1px solid var(--md-sys-color-outline-variant);
-    border-radius: 0.25em;
 }
 
 .carouselViewport {
     overflow: hidden;
+    border: 1px solid var(--md-sys-color-outline-variant);
+    border-radius: 0.5em;
     width: 100%;
     height: fit-content;
     margin: 5px;
@@ -51,4 +52,35 @@
     background-color: var(--md-sys-color-secondary-container);
     color: var(--md-sys-color-on-secondary-container);
     border: 1px solid rgba(0, 0, 0, 0);
+}
+
+.codeblock {
+    background: var(--md-sys-color-surface-container-highest);
+    border-bottom: 1px solid var(--md-sys-color-outline);
+    padding-left: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    overflow-y: auto;
+    height: 15em;
+    scrollbar-width: auto; /* or thin */
+    scrollbar-color: #888 #f1f1f1;
+}
+
+.statsBox {
+    display: flex;
+    flex-direction: row;
+}
+.statsBox > * {
+    padding: 10px 10px 5px 20px;
+    display: block;
+    width: 100%;
+}
+
+.statsBox .title {
+    font-size: 14pt;
+    font-weight: 550;
+}
+
+.statsBox .statName {
+    font-weight: 450;
 }
